# mocka

./: .gitignore  Cargo.toml  README.md  runq.sh
debug_data/: debug.mkd  debug.mkg  new-dbg.mkd
src/: debug-pest.sh  error.rs  main.rs
src/mockadoc/: TODO.md  mod.rs  model.rs  parser.pest  parser.rs
src/mockadoc/evaluator/: evaluator.rs  evaluator2.rs  mod.rs  model.rs
src/mockadoc/packer/: error.rs  legacy_packer.rs  mod.rs  model.rs  packer.rs  packer2.rs  utils.rs
src/mockadoc/parser/: mod.rs  parser.pest  parser.rs
src/mockadoc/utils/: packing.rs
src/mockagen/: TODO.md  debug.rs  evaluator.rs  mod.rs  model.rs  packer.rs  parser.pest  parser.rs  tokeniser.rs
src/mockagen/evaluator/: evaluator.rs  generators.rs  mod.rs  model.rs
src/mockagen/packer/: mod.rs  model.rs  packer.rs  packer2.rs
src/mockagen/parser/: mod.rs  parser.pest  parser.rs  parser2.pest  parser2.rs
src/mockagen/utils/: error.rs  iterator.rs  mod.rs  parsing.rs  unpackers.rs
src/utils/: error.rs  iterator.rs  mod.rs  packing.rs
