[package]
name = "mocka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
csv = "1.3.0"
indexmap = "2.2.6"
itertools = "0.12.1"
once_cell = "1.19.0"
pest = "2.7.8"
pest_derive = "2.7.8"
serde = { version = "1.0.203", features = ["derive"] }

lang_packer = { path = "../lang_packer"}
rand = "0.8.5"

